--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This is a Simple Web Server Project.<br>
-With Python SimpleHTTTpServer basic GET POST processing.<br>
-Thank You.<br>  
+This is a Simple Web Server Project.
+With Python SimpleHTTTpServer basic GET POST processing.
+Thank You.
